
pl 11
	- forms for Musical vocabulary 
	- ignore \r for windows
	- Now paper{score,def} & midi{def,score} derived of class
Music_output[_def]. Score is almost empty.
	- Engraver hacking:
	  * junk Text_engraver
	  * Timing_engraver
	  * barnumber now really counts the number of bars
	  * Separated Stem_engraver and Beam_engraver
	  * junk Stem_beam_engraver
	  * no need for Stem_reqs
	- use Direction = {LEFT, RIGHT, UP, DOWN} iso. -1, 1 throughout source
	- ties and slurs with Drul_array
	- junked Spanner_elem_group
	- bf: w32 fixes
	- Spanner now spans items.
	- more GNITting ( bla ) -> (bla), indentation
	- Drul_array
	- Paper_column now is derived of Horizontal_group_item. Items
are no longer hardwired into a Paper_column
	- bf: stdin input
	- PCol -> Paper_column
	- Wtk-i, fugue1, prelude1 (SR)

*******
aug 21
pl 10
	- bf: init pending_indent_i_
	- output header to TeX file. Who wants to write TeX to make it work?

	- mi2mu: bf's, --key option
	- removed Duration(int,int)
	- bf: Duration_convert::dur2_str

pl 9.jcn2
	- redo of mi2mu frontend (midi-parser)
	- bf: String_convert::bin2_i; added bin2_u
	- bf's: Binary_source_file
	- bf: constr. Tempo/Timing_req
pl 0.1.8.jcn3
	- table20, standchen-{16,20}*
*******
aug 18

pl 9	
	- declare rhythic_request
	- preliminary support for real \mudelaheaders
	- context-sensitive arithmetic spacing. Looks alot better
	- silly GNU braces.
	- JCN fixes for pl 8
	- bf: midi instrument
	- Vocabs from GMP-I

pl 8.mb:
	- use log of duration-name

*******
aug 15
pl 8

	- gif -> xpm
	- bf: Whoops! Open eyes now, when finding shortest note in
spring-spacer. Fixes spacing problems.
	- GNU coding: parentheses (here you are, Franc,ois :-)
	- all macros now UPPERCASE
	- Identifier blondification: don't use void*
	- Identifier doesn't store its name. Much cleaner now.	
	- bf: Rest_collision_engraver now always announces
	- bf: announce Staff_sym only once
pl 0.1.7.jcn1
	- complete redo mid/back-end of mi2mu